# triangle-mesh-collision

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
include/: collision_detect.h
meshes/: BIG_SCREW.off  STEEL_HOOK.off  fingertip_20faces.off  fingertip_8faces.off
src/: collision_detect.cpp  collision_detection_test.cpp  main.cpp  ray_tracing_test.cpp  test.cpp
